[tool.poetry]
name = "tnom"
version = "0.3.0"
description = "The Nibiru Oracle Monitoring is a tool for monitoring signer wallet for Nibiru Oracle."
authors = ["Kamikaza731"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pdpyras = "^5.3.0"
python-telegram-bot = "^21.7"
pyyaml = "^6.0.2"
schedule = "^1.2.2"


[tool.poetry.group.dev.dependencies]
ruff = "^0.7.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
