[tool.poetry]
name = "tnom"
version = "0.4.2"
description = "The Nibiru Oracle Monitoring is a tool for monitoring signer wallet for Nibiru Oracle."
authors = ["Kamikaza731"]
readme = "README.md"
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.11,<3.14"
pdpyras = "^5.3.0"
python-telegram-bot = "^21.7"
pyyaml = "^6.0.2"
schedule = "^1.2.2"
aiohttp = "^3.11.6"
numpy = "^2.1.3"
pydantic = "^2.9.2"
argparse = "^1.4.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.7.4"
nuitka = "^2.5.3"
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
